# thermostat

./: CMakeLists.txt  README.md
include/: room.h  room_interface.h  thermostat.h  thermostat_interface.h  timer.h  timer_interface.h
src/: main.cpp  room.cpp  thermostat.cpp  timer.cpp
test/: mock_room.h  mock_thermostat.h  mock_timer.h  room_test.cpp  thermostat_test.cpp  timer_test.cpp
